{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 157,
  "lineage": "cfbafa09-6683-4626-9c0f-d68b223753d1",
  "resources": [
    {
      "module": "module.demo_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-elastic-ip-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0394381105fe8b7db",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-00d51ed0591f64c16",
            "domain": "vpc",
            "id": "eipalloc-0394381105fe8b7db",
            "instance": "i-0cdd48c7db87ed32f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00c71919cee07119a",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-132-10-215.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.10.215",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.demo_server.aws_instance.dev-instance",
            "module.demo_server.aws_internet_gateway.dev-gw",
            "module.demo_server.aws_network_interface.dev-NIT",
            "module.demo_server.aws_security_group.allow_web",
            "module.demo_server.aws_subnet.dev-subnet-1",
            "module.demo_server.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a0c45ebc70f98ea",
            "arn": "arn:aws:ec2:us-east-2:458842202676:instance/i-0cdd48c7db87ed32f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cdd48c7db87ed32f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "access-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-00c71919cee07119a"
              }
            ],
            "primary_network_interface_id": "eni-00c71919cee07119a",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ff672cf5b1b2220",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7798ef7cd25b8d0",
            "tags": {
              "Name": "web_server"
            },
            "tags_all": {
              "Name": "web_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e642ea6b0a95676d"
            ]
          },
          "dependencies": [
            "module.demo_server.aws_network_interface.dev-NIT",
            "module.demo_server.aws_security_group.allow_web",
            "module.demo_server.aws_subnet.dev-subnet-1",
            "module.demo_server.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_server",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:458842202676:internet-gateway/igw-0e7533714f60cb6c3",
            "id": "igw-0e7533714f60cb6c3",
            "owner_id": "458842202676",
            "tags": {
              "Name": "developement gateway"
            },
            "tags_all": {
              "Name": "developement gateway"
            },
            "vpc_id": "vpc-0222665f7443deac3"
          },
          "dependencies": [
            "module.demo_server.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_server",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "dev-NIT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:458842202676:network-interface/eni-00c71919cee07119a",
            "id": "eni-00c71919cee07119a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:0a:01:45:fb:18",
            "owner_id": "458842202676",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e642ea6b0a95676d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7798ef7cd25b8d0"
          },
          "dependencies": [
            "module.demo_server.aws_security_group.allow_web",
            "module.demo_server.aws_subnet.dev-subnet-1",
            "module.demo_server.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_server",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:458842202676:route-table/rtb-041fab381ec949427",
            "id": "rtb-041fab381ec949427",
            "owner_id": "458842202676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7533714f60cb6c3",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7533714f60cb6c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development_table"
            },
            "tags_all": {
              "Name": "development_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0222665f7443deac3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_server.aws_internet_gateway.dev-gw",
            "module.demo_server.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_server",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-associate-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b365eda34d5730e3",
            "route_table_id": "rtb-041fab381ec949427",
            "subnet_id": "subnet-0b7798ef7cd25b8d0"
          },
          "dependencies": [
            "module.demo_server.aws_internet_gateway.dev-gw",
            "module.demo_server.aws_route_table.dev-rt",
            "module.demo_server.aws_subnet.dev-subnet-1",
            "module.demo_server.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:458842202676:security-group/sg-0e642ea6b0a95676d",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e642ea6b0a95676d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "458842202676",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0222665f7443deac3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_server.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_server",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:458842202676:subnet/subnet-0b7798ef7cd25b8d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b7798ef7cd25b8d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458842202676",
            "tags": {
              "Name": "development subnet"
            },
            "tags_all": {
              "Name": "development subnet"
            },
            "vpc_id": "vpc-0222665f7443deac3"
          },
          "dependencies": [
            "module.demo_server.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_server",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:458842202676:vpc/vpc-0222665f7443deac3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c8a2be8e2136f48",
            "default_route_table_id": "rtb-0b7c6fe6290868f21",
            "default_security_group_id": "sg-0fd3d3d38f3a62f7e",
            "dhcp_options_id": "dopt-0b21a323c840fa7b9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0222665f7443deac3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b7c6fe6290868f21",
            "owner_id": "458842202676",
            "tags": {
              "Name": "developement vpc"
            },
            "tags_all": {
              "Name": "developement vpc"
            }
          }
        }
      ]
    }
  ]
}